sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.error
AlgBubbleSort1:4: error: illegal start of simple pattern
  for (var i=0, i<n, i++)
       ^AlgBubbleSort1:10: error: '<-' expected but '}' found.
}
^