sort.basic.lessons.sort.basic.bubble.AlgBubbleSort1.scala.code
def bubbleSort()  {
  var n = getNombreValeurs();
  for (var i=0, i<n, i++)
  {
    if(plusPetit(i, i+1) )
    	echange(i, i+1);
  }
  
}
